# project4-backend

./: .gitignore  Dockerfile  Pipfile  pyproject.toml
events/: models.py  serializers.py  urls.py  views.py
events/migrations/: 0001_initial.py  0002_rename_host_id_event_host.py  0003_event_participant.py
project/: settings.py  urls.py
users/: admin.py  authentication.py  models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_customuser_username.py
